# drone_delivery_autonomous

./: .gitignore  LICENSE  create_frozen_dataset.py  pyproject.toml  readme.md  run_env.py
agent/: __init__.py  ppo.py  reinforce.py  sac.py
configs/: config.yaml
env/: __init__.py  delivery_env.py  drone_dynamics.py  visual_markers.py
env/assets/: cf2x.urdf
evaluation/: __init__.py  benchmark_wrapper.py  evaluate.py  frozen_dataset.json  frozen_dataset.py
experiments/1/logs/: monitor_1.csv.monitor.csv
experiments/1/models/: checkpoint_8000000_steps_norm.pkl
experiments/4/models/: final_model_norm.pkl
experiments/6/logs/: monitor_2.csv.monitor.csv
experiments/7/logs/: monitor_1.csv.monitor.csv  monitor_2.csv.monitor.csv  monitor_3.csv.monitor.csv
experiments/ppo_free/logs/: monitor_0.csv.monitor.csv  monitor_2.csv.monitor.csv  monitor_3.csv.monitor.csv
reports/: ppo_free_combined.json  ppo_free_obstacles.json  ppo_free_training.csv  ppo_free_vanilla.json  ppo_free_wind.json  ppo_obstacles_combined.json  ppo_obstacles_obstacles.json  ppo_obstacles_training.csv  ppo_obstacles_vanilla.json  ppo_obstacles_wind.json  reinforce_free_combined.json  reinforce_free_obstacles.json  reinforce_free_training.csv  reinforce_free_vanilla.json  reinforce_free_wind.json  reinforce_obstacles_combined.json  reinforce_obstacles_obstacles.json  reinforce_obstacles_training.csv  reinforce_obstacles_vanilla.json  reinforce_obstacles_wind.json
scripts/: __init__.py  plot_comparison.py
training/: __init__.py  callbacks.py  evaluate.py  train.py
(+15 files in other folders)
