[project]
name = "drone_delivery_autonomous"
version = "0.1.0"
description = "Drone delivery reinforcement learning project"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "gymnasium>=0.29.1",
    "stable-baselines3==2.3.2",
    "torch==2.3.1+cpu",
    "tensorboard>=2.16",
    "wandb>=0.17",
    "imageio>=2.34",
    "tqdm>=4.66",
    "rich>=13.7",
    "imageio-ffmpeg>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["env", "agent", "training", "evaluation"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
